--- a/HippoSupermecado/app/src/main/res/layout/fragment_quem_somos.xml
+++ b/HippoSupermecado/app/src/main/res/layout/fragment_quem_somos.xml
@@ -108,7 +108,7 @@
                 android:id="@+id/imageView8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/saulo" />
+                android:src="@drawable/saulinho" />
 
             <TextView
                 android:id="@+id/textView15"
@@ -147,7 +147,7 @@
                 android:id="@+id/imageView11"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/mark" />
+                android:src="@drawable/markinho" />
 
             <TextView
                 android:id="@+id/textView18"
