--- a/HippoSupermecado/app/src/main/res/layout/fragment_no_internet.xml
+++ b/HippoSupermecado/app/src/main/res/layout/fragment_no_internet.xml
@@ -35,4 +35,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="223dp"
+        android:layout_height="121dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/semrede"
+        app:layout_constraintBottom_toTopOf="@+id/txtErro"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtOps" />
+
 </android.support.constraint.ConstraintLayout>
