--- a/HippoSupermecado/app/src/main/res/menu/menu.xml
+++ b/HippoSupermecado/app/src/main/res/menu/menu.xml
@@ -26,7 +26,7 @@
         <item
             android:id="@+id/action_sobre"
             android:checked="false"
-            android:icon="@drawable/finalizarcompra"
+            android:icon="@drawable/quemsomos"
             android:title="Sobre Nós"
             />
     </group>
