--- a/HippoSupermecado/app/src/main/res/layout/item_produto.xml
+++ b/HippoSupermecado/app/src/main/res/layout/item_produto.xml
@@ -25,6 +25,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <View
+            android:id="@+id/view2"
+            android:layout_width="121dp"
+            android:layout_height="120dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/back"
+            android:backgroundTint="@color/cardview_light_background"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ImageView
             android:id="@+id/imgProduto"
             android:layout_width="129dp"
@@ -80,8 +90,6 @@
             app:layout_constraintTop_toBottomOf="@+id/txtDesconto" />
 
     </android.support.constraint.ConstraintLayout>
-
-
 
 
 </android.support.constraint.ConstraintLayout>
