--- a/HippoSupermecado/app/src/main/res/layout/fragment_destaque.xml
+++ b/HippoSupermecado/app/src/main/res/layout/fragment_destaque.xml
@@ -33,7 +33,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvQtd"
+        app:layout_constraintTop_toBottomOf="@+id/tvQtdProdutos"
         app:layout_constraintVertical_bias="0.955">
 
     </FrameLayout>
@@ -52,6 +52,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.025"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvQtd"
+        app:layout_constraintTop_toBottomOf="@+id/tvQtdProdutos"
         app:layout_constraintVertical_bias="1.0" />
 </android.support.constraint.ConstraintLayout>
