--- a/HippoSupermecado/app/src/main/res/layout/fragment_checkout.xml
+++ b/HippoSupermecado/app/src/main/res/layout/fragment_checkout.xml
@@ -49,6 +49,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:checked="true"
+            android:duplicateParentState="false"
             android:text="Cadtão de Crédito" />
 
         <RadioButton
@@ -89,6 +91,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:checked="true"
             android:text="Endereço" />
     </RadioGroup>
 
