--- a/HippoSupermecado/app/src/main/res/layout/fragment_endereco.xml
+++ b/HippoSupermecado/app/src/main/res/layout/fragment_endereco.xml
@@ -124,7 +124,7 @@
         app:layout_constraintTop_toBottomOf="@+id/etComplemento" />
 
     <Button
-        android:id="@+id/btEnviar"
+        android:id="@+id/btEnviarEnd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
