--- a/HippoSupermecado/app/src/main/res/layout/detalhes_layout.xml
+++ b/HippoSupermecado/app/src/main/res/layout/detalhes_layout.xml
@@ -221,11 +221,10 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="155dp"
         android:layout_marginTop="13dp"
         android:text="Quantidade:"
         android:textSize="10sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/btnAddQtd"
         app:layout_constraintTop_toBottomOf="@+id/tvCategoria" />
 
 </android.support.constraint.ConstraintLayout>
